--- a/templates/default.html
+++ b/templates/default.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>trema-unh.github.com - $title$</title>
+    <title>TREMA @ UNH - $title$</title>
     <link rel="stylesheet" type="text/css" href="/css/default.css" />
-    <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
   <body>
@@ -14,7 +13,8 @@
           <nav>
             <h1>Navigation</h1>
             <ul>
-              <li><a href="/index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/wikimarks">Wikimarks</a></li>
             </ul>
           </nav>
         </div>
